moved profile.html to view folder

--- a/view/profile.html
+++ b/view/profile.html
@@ -30,31 +30,52 @@
         <h3><strong>What kinds of activities do you like?</strong></h3>
         <div class="input-group" role="group" aria-label="..." id="q1">
             <p>
-                <input type="radio" name="q1" value="1"> Party!</p>
+                <input type="checkbox" name="q1" value="1"> Concerts</p>
             <p>
-                <input type="radio" name="q1" value="2"> Dinner and a Movie</p>
+                <input type="checkbox" name="q1" value="2"> Movies</p>
             <p>
-                <input type="radio" name="q1" value="3"> Outdoor Adventure</p>
+                <input type="checkbox" name="q1" value="3"> Outdoor Adventure</p>
             <p>
-                <input type="radio" name="q1" value="4"> Get Some Culture</p>
+                <input type="checkbox" name="q1" value="4"> Fine Arts</p>
             <p>
-                <input type="radio" name="q1" value="5"> Netflix and Chill</p>
+                <input type="checkbox" name="q1" value="4"> Sports Game</p>
+            <p>
+                <input type="checkbox" name="q1" value="4"> Bars and Night Life</p>
+            <p>
+                <input type="checkbox" name="q1" value="4"> Festivals</p>
+            <p>
+                <input type="checkbox" name="q1" value="4"> Comedy</p>
+            <p>
+                <input type="checkbox" name="q1" value="4"> Food</p>
+            <p>
+                <input type="checkbox" name="q1" value="5"> Netflix and Chill</p>
         </div>
         <h4>What Food Do You Like?</h4>
         <div class="input-group" role="group" aria-label="..." id="q2">
             <p>
-                <input type="radio" name="q2" value="1"> Italian</p>
+                <input type="checkbox" name="q2" value="1"> Italian</p>
             <p>
-                <input type="radio" name="q2" value="2"> Mexican</p>
+                <input type="checkbox" name="q2" value="2"> Mexican</p>
             <p>
-                <input type="radio" name="q2" value="3"> Chinese</p>
+                <input type="checkbox" name="q2" value="3"> Chinese</p>
             <p>
-                <input type="radio" name="q2" value="4"> Sushi</p>
+                <input type="checkbox" name="q2" value="4"> Sushi</p>
             <p>
-                <input type="radio" name="q2" value="5"> Burgers</p>
+                <input type="checkbox" name="q2" value="5"> Burgers</p>
             <p>
-                <input type="radio" name="q2" value="6"> Seafood</p>
+                <input type="checkbox" name="q2" value="6"> Seafood</p>
+            <p>
+                <input type="checkbox" name="q2" value="1"> American (Traditional)</p>
+            <p>
+                <input type="checkbox" name="q2" value="1"> Thai</p>
+            <p>
+                <input type="checkbox" name="q2" value="1"> Pizza</p><br>
         </div>
+
+        <!-- Submit Button -->
+        <button type="submit" class="btn btn-primary btn-lg btn-block" id="submit"><i class="fa fa-check-circle" aria-hidden="true"></i> Submit
+        </button>
+        <hr>
 </div>
 <script type="text/javascript">
         $("#submit").on("click", function(){
