added movie genre to survey

--- a/view/profile.html
+++ b/view/profile.html
@@ -27,7 +27,7 @@
         <p>Date Night:<input type="text" name="date" id="dateselector"></p>
        <br>
         <h4>Date Night Questions</h4>
-        <h3><strong>What kinds of activities do you like?</strong></h3>
+        <h3><strong>What Kinds of Activities Do You and Your Date Prefer?</strong></h3>
         <div class="input-group" role="group" aria-label="..." id="q1">
             <p>
                 <input type="checkbox" name="q1" value="1"> Concerts</p>
@@ -50,7 +50,7 @@
             <p>
                 <input type="checkbox" name="q1" value="5"> Netflix and Chill</p>
         </div>
-        <h4>What Food Do You Like?</h4>
+        <h4>What Food Do You and your Date Like?</h4>
         <div class="input-group" role="group" aria-label="..." id="q2">
             <p>
                 <input type="checkbox" name="q2" value="1"> Italian</p>
@@ -70,6 +70,24 @@
                 <input type="checkbox" name="q2" value="1"> Thai</p>
             <p>
                 <input type="checkbox" name="q2" value="1"> Pizza</p><br>
+        </div>
+        <h4>What Movie Genres Do You and Your Date Like?</h4>
+        <div class="input-group" role="group" aria-label="..." id="q2">
+            <p>
+                <input type="checkbox" name="q3" value="1"> Comedy</p>
+            <p>
+                <input type="checkbox" name="q3" value="2"> Horror</p>
+            <p>
+                <input type="checkbox" name="q3" value="3"> Action</p>
+            <p>
+                <input type="checkbox" name="q3" value="4"> Drama</p>
+            <p>
+                <input type="checkbox" name="q3" value="5"> Animated</p>
+            <p>
+                <input type="checkbox" name="q3" value="6"> Sci-Fi</p>
+            <p>
+                <input type="checkbox" name="q3" value="1"> Thriller</p>
+            <br>
         </div>
 
         <!-- Submit Button -->
