add authentication function

--- a/views/index.html
+++ b/views/index.html
@@ -58,21 +58,25 @@
 				    <h1>Date Night. Great Time.</h1>
 				    <h2>Check out the activites around you.</h2>
 
-				    <form action="/join" method="get">
+				    <form>
 					    <div class="sign_up center-block no-gutter">
 
 					    	<div class="col-md-3"></div>
 					        
-					        <div class="col-xs-12 col-sm-7 col-md-3">
-					          <input name="email" type="email" size="30" autofocus="autofocus" placeholder="email@gmail.com" class="form-control signup_email" required="">
+
+					        <div class="col-xs-12 col-sm-5 col-md-3">
+					          <a href="/login"> 
+					          	<input class="btn btn-success signup_email" style="width:100%" value="Sing In">
+					          </a>	
 					        </div>
 
 					        <div class="col-xs-12 col-sm-5 col-md-3">
-					          <input type="submit" class="btn btn-success signup_email" style="width:100%" value="Create free account">
+					        	<a href="/signup">
+					          		<input class="btn btn-success signup_email" style="width:100%" value="Create free account">
+					          	</a>
 					        </div>
 
 					        <div class="col-md-3"></div>
-
 
 
 					    </div>
