add img and update css

--- a/views/index.html
+++ b/views/index.html
@@ -84,17 +84,17 @@
 
 				    <div class="video_wrapper main_sell">
 					    <div class="col-xs-12 col-sm-4">
-						    <img src="/images/day_view/work@2x.png" class="retina" width="210" height="180">
+						    <img src="images/work@2x.png" class="retina" width="210" height="180">
 						    <br>
 						    <strong>1. Enter What you like</strong>
 					    </div>
 						<div class="col-xs-12 col-sm-4">
-						    <img src="/images/day_view/track@2x.png" class="retina" width="210" height="180">
+						    <img src="images/log@2x.png" class="retina" width="210" height="180">
 						    <br>
 						    <strong>2. Get activitie information</strong>
 					    </div>
 					    <div class="col-xs-12 col-sm-4">
-						    <img src="/images/day_view/log@2x.png" class="retina" width="210" height="180">
+						    <img src="images/track@2x.png" class="retina" width="210" height="180">
 						    <br>
 						    <strong>3. Enjoy</strong>
 					    </div>
