--- a/views/assets/css/style.css
+++ b/views/assets/css/style.css
@@ -15,10 +15,17 @@ font-family: "Avenir", 'helvetica neue', 'helvetica', 'arial' !important;
 form {
 
 	    padding-top: 30px;
-    padding-bottom: 100px;
+    padding-bottom: 50px;
 
 }
 
 h2{
 	color: #bde0f4;
+}
+
+strong {
+    display: block;
+    padding-top: 20px;
+    font-size: 24px;
+    font-weight: normal;
 }
