--- a/views/assets/css/style.css
+++ b/views/assets/css/style.css
@@ -29,3 +29,16 @@ strong {
     font-size: 24px;
     font-weight: normal;
 }
+
+h1{
+    color: white;
+    font-size: 43px;
+}
+
+label{
+    color: #bde0f4;
+}
+
+p{
+    color: #bde0f4;
+}
