--- a/views/profile.html
+++ b/views/profile.html
@@ -5,10 +5,12 @@
     <title>Date Night</title>
     <!-- bootstrap -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
+    <link rel="stylesheet" type="text/css" href="css/style.css">
     <!-- jquery -->
-    <link rel="stylesheet" href="//code.jquery.com/ui/1.12.1/themes/eggplant/jquery-ui.css">
+    <!-- <link rel="stylesheet" href="//code.jquery.com/ui/1.12.1/themes/eggplant/jquery-ui.css"> -->
     <script src="https://code.jquery.com/jquery.js"></script>
     <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
+
 </head>
 <body>
 <div class="container">
@@ -20,7 +22,7 @@
         <input type="text" name="" id="lastname" class="form-control" required="">
         <h4>Email</h4>
         <input type="text" name="" id="email" class="form-control" required="">
-        <h4>Location</h4>
+        <h4>Location (City, State)</h4>
         <input type="text" name="" id="location" class="form-control" required="">
         <hr><br>
         <h4>When are you planning your date night?</h4>
@@ -32,23 +34,15 @@
             <p>
                 <input type="checkbox" name="q1" value="1"> Concerts</p>
             <p>
-                <input type="checkbox" name="q1" value="2"> Movies</p>
-            <p>
                 <input type="checkbox" name="q1" value="3"> Outdoor Adventure</p>
             <p>
                 <input type="checkbox" name="q1" value="4"> Fine Arts</p>
             <p>
                 <input type="checkbox" name="q1" value="4"> Sports Game</p>
             <p>
-                <input type="checkbox" name="q1" value="4"> Bars and Night Life</p>
-            <p>
                 <input type="checkbox" name="q1" value="4"> Festivals</p>
             <p>
                 <input type="checkbox" name="q1" value="4"> Comedy</p>
-            <p>
-                <input type="checkbox" name="q1" value="4"> Food</p>
-            <p>
-                <input type="checkbox" name="q1" value="5"> Netflix and Chill</p>
         </div>
         <h4>What Food Do You and your Date Like?</h4>
         <div class="input-group" role="group" aria-label="..." id="q2">
@@ -57,41 +51,17 @@
             <p>
                 <input type="checkbox" name="q2" value="2"> Mexican</p>
             <p>
-                <input type="checkbox" name="q2" value="3"> Chinese</p>
-            <p>
-                <input type="checkbox" name="q2" value="4"> Sushi</p>
-            <p>
-                <input type="checkbox" name="q2" value="5"> Burgers</p>
+                <input type="checkbox" name="q2" value="3"> Asian</p>
             <p>
                 <input type="checkbox" name="q2" value="6"> Seafood</p>
             <p>
                 <input type="checkbox" name="q2" value="1"> American (Traditional)</p>
-            <p>
-                <input type="checkbox" name="q2" value="1"> Thai</p>
-            <p>
-                <input type="checkbox" name="q2" value="1"> Pizza</p><br>
         </div>
-        <h4>What Movie Genres Do You and Your Date Like?</h4>
-        <div class="input-group" role="group" aria-label="..." id="q2">
-            <p>
-                <input type="checkbox" name="q3" value="1"> Comedy</p>
-            <p>
-                <input type="checkbox" name="q3" value="2"> Horror</p>
-            <p>
-                <input type="checkbox" name="q3" value="3"> Action</p>
-            <p>
-                <input type="checkbox" name="q3" value="4"> Drama</p>
-            <p>
-                <input type="checkbox" name="q3" value="5"> Animated</p>
-            <p>
-                <input type="checkbox" name="q3" value="6"> Sci-Fi</p>
-            <p>
-                <input type="checkbox" name="q3" value="1"> Thriller</p>
             <br>
         </div>
 
         <!-- Submit Button -->
-        <button type="submit" class="btn btn-primary btn-lg btn-block" id="submit"><i class="fa fa-check-circle" aria-hidden="true"></i> Submit
+        <button type="submit" class="btn btn-primary btn-lg" id="submit"><i class="fa fa-check-circle" aria-hidden="true"></i> Submit
         </button>
         <hr>
 </div>
