--- a/views/event.html
+++ b/views/event.html
@@ -7,6 +7,10 @@
 	<link rel="stylesheet" type="text/css" href="css/style.css">
 
 	<script src="https://code.jquery.com/jquery.js"></script>
+
+	<script src="http://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+
+	<script type="text/javascript" src="http://api.eventful.com/js/api"> </script>
 	
 
 
@@ -26,7 +30,7 @@
 					<div class="collapse navbar-collapse navbar-ex1-collapse">
 					    <ul class="nav navbar-nav choose_page">				       
 					        
-					            <li class="about"><a href="/about">About</a></li>
+					            <li class="about"><a href="/">About</a></li>
 					        
 					        
 					            <li class="jobs"><a href="/jobs">Jobs</a></li>
@@ -56,35 +60,26 @@
 				    <i class="icon icon-timelylogo large_bg"></i>
 
 				    <h1>Date Night. Great Time.</h1>
-				    <h2>Check out the activites around you.</h2>
+				    <h2>Activities around you.</h2>
 
 				    
 
-				    <div class="video_wrapper main_sell">
-					    <div class="col-xs-12 col-sm-4">
-						    <img src="images/work@2x.png" class="retina" width="210" height="180">
-						    <br>
-						    <strong>1. Enter What you like</strong>
-					    </div>
-						<div class="col-xs-12 col-sm-4">
-						    <img src="images/log@2x.png" class="retina" width="210" height="180">
-						    <br>
-						    <strong>2. Get activity information</strong>
-					    </div>
-					    <div class="col-xs-12 col-sm-4">
-						    <img src="images/track@2x.png" class="retina" width="210" height="180">
-						    <br>
-						    <strong>3. Enjoy</strong>
-					    </div>
-					    				
-				    </div>
-
+				    
 				</div><!--container-->
 
 			</div><!--jumbotron-->
 
 		</div><!--top_wrapper-->
 
+		<div class="panel-body" id="ListEvents">
+				
+					<!-- Content will go in here -->
+
+		</div>
+
 	</div><!--wrapper-->	
+
+	<script src="js.js" type="text/javascript"></script>
+
 
 </body></html>
