--- a/views/profile.html
+++ b/views/profile.html
@@ -17,13 +17,13 @@
         <h2>Create Profile</h2>
         <hr>
         <h4>First Name</h4>
-        <input type="text" name="" id="firstname" class="form-control" required="">
+        <input type="text" name="first_name" id="firstname" class="form-control" required="">
         <h4>Last Name</h4>
-        <input type="text" name="" id="lastname" class="form-control" required="">
+        <input type="text" name="last_name" id="lastname" class="form-control" required="">
         <h4>Email</h4>
-        <input type="text" name="" id="email" class="form-control" required="">
+        <input type="text" name="email" id="email" class="form-control" required="">
         <h4>Location (City, State)</h4>
-        <input type="text" name="" id="location" class="form-control" required="">
+        <input type="text" name="email" id="location" class="form-control" required="">
         <hr><br>
         <h4>When are you planning your date night?</h4>
         <p>Date Night:<input type="text" name="date" id="dateselector"></p>
