updated names/values in profile.html

--- a/views/profile.html
+++ b/views/profile.html
@@ -23,7 +23,7 @@
         <h4>Email</h4>
         <input type="text" name="email" id="email" class="form-control" required="">
         <h4>Location (City, State)</h4>
-        <input type="text" name="email" id="location" class="form-control" required="">
+        <input type="text" name="location" id="location" class="form-control" required="">
         <hr><br>
         <h4>When are you planning your date night?</h4>
         <p>Date Night:<input type="text" name="date" id="dateselector"></p>
@@ -32,30 +32,30 @@
         <h3><strong>What Kinds of Activities Do You and Your Date Prefer?</strong></h3>
         <div class="input-group" role="group" aria-label="..." id="q1">
             <p>
-                <input type="checkbox" name="q1" value="1"> Concerts</p>
+                <input type="checkbox" name="Concerts" value="Concerts"> Concerts</p>
             <p>
-                <input type="checkbox" name="q1" value="3"> Outdoor Adventure</p>
+                <input type="checkbox" name="Outdoor" value="Outdoor"> Outdoor Adventure</p>
             <p>
-                <input type="checkbox" name="q1" value="4"> Fine Arts</p>
+                <input type="checkbox" name="Fine Arts" value="Fine Arts"> Fine Arts</p>
             <p>
-                <input type="checkbox" name="q1" value="4"> Sports Game</p>
+                <input type="checkbox" name="Sports" value="Sports"> Sports Game</p>
             <p>
-                <input type="checkbox" name="q1" value="4"> Festivals</p>
+                <input type="checkbox" name="Festivals" value="Festivals"> Festivals</p>
             <p>
-                <input type="checkbox" name="q1" value="4"> Comedy</p>
+                <input type="checkbox" name="Comedy" value="Comedy"> Comedy</p>
         </div>
         <h4>What Food Do You and your Date Like?</h4>
         <div class="input-group" role="group" aria-label="..." id="q2">
             <p>
-                <input type="checkbox" name="q2" value="1"> Italian</p>
+                <input type="checkbox" name="Italian" value="Italian"> Italian</p>
             <p>
-                <input type="checkbox" name="q2" value="2"> Mexican</p>
+                <input type="checkbox" name="Mexican" value="Mexican"> Mexican</p>
             <p>
-                <input type="checkbox" name="q2" value="3"> Asian</p>
+                <input type="checkbox" name="Asian" value="Asian"> Asian</p>
             <p>
-                <input type="checkbox" name="q2" value="6"> Seafood</p>
+                <input type="checkbox" name="Seafood" value="Seafood"> Seafood</p>
             <p>
-                <input type="checkbox" name="q2" value="1"> American (Traditional)</p>
+                <input type="checkbox" name="American" value="American"> American (Traditional)</p>
         </div>
             <br>
         </div>
