--- a/views/index.html
+++ b/views/index.html
@@ -56,7 +56,7 @@
 				    <i class="icon icon-timelylogo large_bg"></i>
 
 				    <h1>Date Night. Great Time.</h1>
-				    <h2>Check out the activites around you.</h2>
+				    <h2>Check out the activities around you.</h2>
 
 				    <form>
 					    <div class="sign_up center-block no-gutter">
@@ -66,7 +66,7 @@
 
 					        <div class="col-xs-12 col-sm-5 col-md-3">
 					          <a href="/login"> 
-					          	<input class="btn btn-success signup_email" style="width:100%" value="Sing In">
+					          	<input class="btn btn-success signup_email" style="width:100%" value="Sign In">
 					          </a>	
 					        </div>
 
