reworked some of the wording in index.html

--- a/views/index.html
+++ b/views/index.html
@@ -55,8 +55,8 @@
 
 				    <i class="icon icon-timelylogo large_bg"></i>
 
-				    <h1>Date Night. Great Time.</h1>
-				    <h2>Check out the activities around you.</h2>
+				    <h1>Date Night? We're Here To Help!</h1>
+				    <h2>Tell us what you like to do. Then check out the activities near you.</h2>
 
 				    <form>
 					    <div class="sign_up center-block no-gutter">
@@ -80,13 +80,13 @@
 
 
 					    </div>
-				    </form>
+				    </form><br>
 
 				    <div class="video_wrapper main_sell">
 					    <div class="col-xs-12 col-sm-4">
 						    <img src="images/work@2x.png" class="retina" width="210" height="180">
 						    <br>
-						    <strong>1. Enter What you like</strong>
+						    <strong>1. Tell us what you like to do</strong>
 					    </div>
 						<div class="col-xs-12 col-sm-4">
 						    <img src="images/log@2x.png" class="retina" width="210" height="180">
@@ -96,7 +96,7 @@
 					    <div class="col-xs-12 col-sm-4">
 						    <img src="images/track@2x.png" class="retina" width="210" height="180">
 						    <br>
-						    <strong>3. Enjoy</strong>
+						    <strong>3. Enjoy your date night!</strong>
 					    </div>
 					    				
 				    </div>
