--- a/views/index.html
+++ b/views/index.html
@@ -40,6 +40,8 @@
 					        
 					        
 					            <li class="signin"><a href="/singIn">Sign in</a></li>
+
+					            <li class="brand"><h4>The Date Night App</h4></li>
 					        
 					    </ul>
 					    
@@ -55,8 +57,8 @@
 
 				    <i class="icon icon-timelylogo large_bg"></i>
 
-				    <h1>Date Night? We're Here To Help!</h1>
-				    <h2>Tell us what you like to do. Then check out the activities near you.</h2>
+				    <h1>Need A Date Night? Look No Further!</h1>
+				    <h2>Tell us what you like to do and then get ready for an amazing date night.</h2>
 
 				    <form>
 					    <div class="sign_up center-block no-gutter">
@@ -80,7 +82,7 @@
 
 
 					    </div>
-				    </form><br>
+				    </form>
 
 				    <div class="video_wrapper main_sell">
 					    <div class="col-xs-12 col-sm-4">
