--- a/views/event.html
+++ b/views/event.html
@@ -59,8 +59,8 @@
 
 				    <i class="icon icon-timelylogo large_bg"></i>
 
-				    <h1>Date Night. Great Time.</h1>
-				    <h2>Activities around you.</h2>
+				    <h1>Gussy Up and Grab Your Date!</h1>
+				    <h2>Here are some events going on around you.</h2>
 
 				    
 
