--- a/views/profile.html
+++ b/views/profile.html
@@ -29,7 +29,7 @@
         <p>Date Night:<input type="text" name="date" id="dateselector"></p>
        <br>
         <h4>Date Night Questions</h4>
-        <h3><strong>What Kinds of Activities Do You and Your Date Prefer?</strong></h3>
+        <h4>What Kinds of Activities Do You and Your Date Prefer?</h4>
         <div class="input-group" role="group" aria-label="..." id="q1">
             <p>
                 <input type="checkbox" name="Concerts" value="Concerts"> Concerts</p>
