--- a/views/login.ejs
+++ b/views/login.ejs
@@ -20,26 +20,28 @@
                     <div class="collapse navbar-collapse navbar-ex1-collapse">
                         <ul class="nav navbar-nav choose_page">                    
                             
-                                <li class="about"><a href="/about">About</a></li>
-                            
-                            
-                                <li class="jobs"><a href="/jobs">Jobs</a></li>
-                            
-                            
-                                <li class="contact"><a href="/contact">Contact</a></li>
-                            
-                                <li class="help"><a href="/help">Help</a></li>
-                            
-                                <li class="blog"><a href="/blog">Blog</a></li> 
-                            
-                            
-                                <li class="signin"><a href="/singIn">Sign in</a></li>
-                            
+                                <li class="about"><a href="/">ABOUT</a></li>
+                                <li class="jobs"><a href="/jobs">JOBS</a></li>
+                                <li class="contact"><a href="/contact">CONTACT</a></li>
+                                <li class="signin"><a href="/signup">SIGN UP</a></li>
+                                                
                         </ul>
+
+                       
+                            <li class="brand">
+                            <h4>
+                            <span class="glyphicon glyphicon-glass"></span>   The Date Night App</h4>
+                            </li>
+                       
+
+
                         
                     </div><!-- /.navbar-collapse -->
+
+                    
+
                 </div>
-    </nav>
+            </nav>
 
 
     <div class="container">
