--- a/views/index.html
+++ b/views/index.html
@@ -26,26 +26,26 @@
 					<div class="collapse navbar-collapse navbar-ex1-collapse">
 					    <ul class="nav navbar-nav choose_page">				       
 					        
-					            <li class="about"><a href="/about">About</a></li>
-					        
-					        
-					            <li class="jobs"><a href="/jobs">Jobs</a></li>
-					        
-					        
-					            <li class="contact"><a href="/contact">Contact</a></li>
-					        
-					            <li class="help"><a href="/help">Help</a></li>
-					        
-					            <li class="blog"><a href="/blog">Blog</a></li> 
-					        
-					        
-					            <li class="signin"><a href="/singIn">Sign in</a></li>
-
-					            <li class="brand"><h4>The Date Night App</h4></li>
-					        
+					            <li class="about"><a href="/">ABOUT</a></li>
+					            <li class="jobs"><a href="/jobs">JOBS</a></li>
+					            <li class="contact"><a href="/contact">CONTACT</a></li>
+					            <li class="signin"><a href="/login">LOG IN</a></li>
+					         			        
 					    </ul>
+
+					   
+					    	<li class="brand">
+					    	<h4>
+					    	<span class="glyphicon glyphicon-glass"></span>   The Date Night App</h4>
+					    	</li>
+					   
+
+
 					    
 					</div><!-- /.navbar-collapse -->
+
+					
+
 				</div>
 			</nav>
 
@@ -57,7 +57,7 @@
 
 				    <i class="icon icon-timelylogo large_bg"></i>
 
-				    <h1>Need A Date Night? Look No Further!</h1>
+				    <h5 class="title_head">Need A Date Night? Look No Further!</h1>
 				    <h2>Tell us what you like to do and then get ready for an amazing date night.</h2>
 
 				    <form>
@@ -68,7 +68,7 @@
 
 					        <div class="col-xs-12 col-sm-5 col-md-3">
 					          <a href="/login"> 
-					          	<input class="btn btn-success signup_email" style="width:100%" value="Sign In">
+					          	<input class="btn btn-success signup_email" style="width:100%" value="Login">
 					          </a>	
 					        </div>
 
@@ -86,17 +86,17 @@
 
 				    <div class="video_wrapper main_sell">
 					    <div class="col-xs-12 col-sm-4">
-						    <img src="images/work@2x.png" class="retina" width="210" height="180">
+						    <img src="images/work@2x.png" class="retina" width="160" height="130">
 						    <br>
 						    <strong>1. Tell us what you like to do</strong>
 					    </div>
 						<div class="col-xs-12 col-sm-4">
-						    <img src="images/log@2x.png" class="retina" width="210" height="180">
+						    <img src="images/log@2x.png" class="retina" width="160" height="130">
 						    <br>
 						    <strong>2. Get activity information</strong>
 					    </div>
 					    <div class="col-xs-12 col-sm-4">
-						    <img src="images/track@2x.png" class="retina" width="210" height="180">
+						    <img src="images/track@2x.png" class="retina" width="160" height="130">
 						    <br>
 						    <strong>3. Enjoy your date night!</strong>
 					    </div>
