--- a/views/input.html
+++ b/views/input.html
@@ -16,6 +16,40 @@
 	</head>
 
 	<body>
+
+		<nav class="navbar navbar-default navbar-inverse navbar-static-top main" role="navigation">
+			
+				<div class="container">
+
+				  <!-- Collect the nav links, forms, and other content for toggling -->
+					<div class="collapse navbar-collapse navbar-ex1-collapse">
+					    <ul class="nav navbar-nav choose_page">				       
+					        
+					            <li class="about"><a href="/">ABOUT</a></li>
+					            <li class="jobs"><a href="/jobs">JOBS</a></li>
+					            <li class="contact"><a href="/contact">CONTACT</a></li>
+					            <li class="signin"><a href="/">LOG OUT</a></li>
+					         			        
+					    </ul>
+
+					   
+					    	<li class="brand">
+					    	<h4>
+					    	<span class="glyphicon glyphicon-glass"></span>   The Date Night App</h4>
+					    	</li>
+					   
+
+
+					    
+					</div><!-- /.navbar-collapse -->
+
+					
+
+				</div>
+		</nav>
+
+
+
 		<div class="container">
 			<h1 id="h1_input">Search for local events in your area!</h1>
 			<form id = "findevents">
