update event display

--- a/views/event.html
+++ b/views/event.html
@@ -74,15 +74,18 @@
 
 		</div><!--top_wrapper-->
 
-		<div class="panel-body" id="ListEvents">
-				
-					<!-- Content will go in here -->
+		<div class="container">
+
+					<div id="ListEvents">			
+					<!-- Content will go in here -->					
+					</div>
+			
 
 		</div>
 
 	</div><!--wrapper-->	
 
-	<script src="js.js" type="text/javascript"></script>
+	<script src="showevent.js" type="text/javascript"></script>
 
 
 </body></html>
