--- a/views/assets/css/style.css
+++ b/views/assets/css/style.css
@@ -94,7 +94,7 @@ h3{
 
 .navbar {
     padding-top: 10px;
-    padding-bottom: 10px:  
+    padding-bottom: 20px:  
     background: #2a3b4b;
     font-size: 12px;
 }
@@ -105,4 +105,12 @@ h3{
 
 .contentInfo {
     
+}
+
+.row {
+    padding-bottom: 20px;
+}
+
+img {
+    padding-top: 20px;
 }
