add more information on index

--- a/views/assets/css/style.css
+++ b/views/assets/css/style.css
@@ -114,3 +114,31 @@ h3{
 img {
     padding-top: 20px;
 }
+
+.buttonInfo {
+    padding-top: 30px;
+    background: white;
+    text-align: center;
+}
+
+.buttonTitle {
+    color: black;
+    font-size: 34px;
+}
+
+.buttonP {
+    color: #818a92;
+    font-size: 20px;
+}
+
+
+
+
+
+
+
+
+
+
+
+
