--- a/views/index.html
+++ b/views/index.html
@@ -109,7 +109,49 @@
 
 		</div><!--top_wrapper-->
 
-		<div>
+		<div class="buttonInfo">
+
+			<div class="row">
+
+				<div class="col-xs-12 col-sm-1">
+					
+				</div>
+				
+				<div class="col-xs-12 col-sm-10">
+
+					<h2 class="buttonTitle">Your Date Night App</h2>
+					<br>
+					<p class="buttonP">Provide ways for couple to interact more with each other according to their interest outside of virtual world.</p>
+					<p class="buttonP">Improve relationship between couple through live activities than through text messages.</p>
+					<p class="buttonP">Resulting in better understandings.</p>
+					<p class="buttonP">Hope generate great fun and romantic memories</p>
+					
+
+				</div>
+						    
+				<div class="col-xs-12 col-sm-1">
+
+				</div>
+
+			</div>
+
+
+
+			<div class="row">
+
+				<div class="col-xs-12 col-sm-2">
+					
+				</div>
+				
+				<div class="col-xs-12 col-sm-6">
+					<img src="images/indexIMG.png" width="800" height="380">
+				</div>
+						    
+				<div class="col-xs-12 col-sm-4">
+
+				</div>
+
+			</div>
 			
 
 
